# rag-pipeline

./: .gitignore  api.py  config.py  main.py  pyproject.toml  rag_system_v2.py  requirements.txt
cli_based/: rag_system.py
components/: document_loader.py  embedding_model.py  format_docs.py  get_retriever.py  text_splitter.py  vector_store.py
data/: astronomy_blackholes.txt  biology_basics.txt  economics_basics.txt  fluid_mechanics.txt  history_rome.txt  philosophy_existentialism.txt  sample_text.txt  tech_explained.txt
faiss_index/: index.faiss  index.pkl
models/: chat.py  upload.py
pipeline/: ingestion_pipeline.py  rag_pipeline.py  retrieval_pipeline.py
providers/: chain_provider.py  ingestor.py  llm_provider.py  retriever_provider.py
test_faiss_index/: index.faiss  index.pkl
