[project]
name = "data-ingestion-pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "faiss-cpu>=1.12.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.7.1",
    "pypdf>=6.1.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
